Add styles for game

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 </h1>
 <div class="game-area">
 <div>
-    <button class="btn btn--big btn--green">
+    <button class="btn btn--big btn--green" data-type="addition">
         <i class="fas fa-plus"></i>
     </button>
-    <button class="btn btn--big btn--blue">
+    <button class="btn btn--big btn--blue" data-type="subtract">
         <i class="fas fa-minus"></i>
     </button>
-    <button class="btn btn--big btn--orange">
+    <button class="btn btn--big btn--orange" data-type="multiply">
         <i class="fas fa-times"></i>
     </button>
-    <button class="btn btn--big btn--red">
+    <button class="btn btn--big btn--red" data-type="divide">
         <i class="fas fa-divide"></i>
     </button>
 </div>
@@ -36,7 +36,7 @@
     <p class="answer-message">Enter Answer:</p>
     <input id="answer-box" type="number">
 </div>
-<button class="btn btn grey">Submit Answer</button>
+<button class="btn btn--gray" data-type="submit">Submit Answer</button>
 
 
 
